feat: add first steps of a gui for store